manage subject with errors

--- a/student_management_app/templates/hod_template/manage_admin_template.html
+++ b/student_management_app/templates/hod_template/manage_admin_template.html
@@ -26,6 +26,7 @@ Manage Admin
                                     <th>Email</th>
                                     <th>Gender</th>
                                     <th>Address</th>
+                                    <th>Department</th>
                                     <th>Last Login</th>
                                     <th>Date Joined</th>
                                     <th>Action</th>
@@ -41,6 +42,7 @@ Manage Admin
                                     <td>{{admin.admin.email}}</td>
                                     <td>{{admin.gender}}</td>
                                     <td>{{admin.address}}</td>
+                                    <td>{{admin.department_id}}</td>
                                     <td>{{admin.admin.last_login}}</td>
                                     <td>{{admin.admin.date_joined}}</td>
                                     <th><a href = "/edit_admin/{{admin.admin.id}}"class="btn btn-success">Edit</a></th>
