--- a/student_management_app/templates/hod_template/add_subject_template.html
+++ b/student_management_app/templates/hod_template/add_subject_template.html
@@ -30,6 +30,19 @@ Add Subject
                 </select>
             </div>
             <div class="form-group">
+              <label>Semester</label>
+              <select class="form-control" name="sem">
+                 <option>1</option>
+                 <option>2</option>
+                 <option>3</option>
+                 <option>4</option>
+                 <option>5</option>
+                 <option>6</option>
+                 <option>7</option>
+                 <option>8</option>
+              </select>
+          </div>
+            <div class="form-group">
                 <label>Staff Name</label>
                 <select class="form-control" name="staff_id">
                     {% for staff in staffs %}
