--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -182,10 +182,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/add_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                View Attendance 
+                Add Results
               </p>
             </a>
           </li>
