partial edit test details

--- a/student_management_app/templates/staff_template/view_test_details.html
+++ b/student_management_app/templates/staff_template/view_test_details.html
@@ -37,7 +37,7 @@ Test Details
                                     <td>{{test.test1_date}}</td>
                                     <td>{{test.test2_date}}</td>
                                     <td>{{test.test3_date}}</td>
-                                    <th><a href = "/edit_tests/"class="btn btn-success">Edit</a></th>
+                                    <th><a href = "/edit_testdetails/{{test.id}}"class="btn btn-success">Edit</a></th>
                                 </tr>
                                 {% endfor %}
                                     
