filters for students

--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -92,7 +92,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/manage_student" class="nav-link">
+            <a href="/get_students_list" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Students
