--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/manage_staff" class="nav-link">
+            <a href="/get_staff_list" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Staff
