student view results added

--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -43,11 +43,10 @@
             </a>
           </li>
           <li class="nav-item">
-            {% url 'student_view_attendance' as student_view_attendance %}
-            <a href="{{ student_view_attendance }}" class="nav-link {% if request.path == student_view_attendance %} active {% endif %}">
+            <a href="/student_view_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                View attendance
+                View Results
               </p>
             </a>
           </li>
