--- a/student_management_app/templates/hod_template/manage_session_template.html
+++ b/student_management_app/templates/hod_template/manage_session_template.html
@@ -22,6 +22,7 @@ Manage Session
                                     <th>ID</th>
                                     <th>Session Start Year</th>
                                     <th>Session End Year</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
