sidebar slight modifications

--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -46,7 +46,7 @@
             <a href="/student_view_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                View Results
+                CIE Score
               </p>
             </a>
           </li>
@@ -64,7 +64,7 @@
             <a href="{{ student_feedback }}" class="nav-link {% if request.path == student_feedback %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Feedback Message
+                Feedback/Concern
               </p>
             </a>
           </li>
