--- a/student_management_app/templates/staff_template/sidebar_template.html
+++ b/student_management_app/templates/staff_template/sidebar_template.html
@@ -123,7 +123,7 @@
             <a href="{{ staff_feedback }}" class="nav-link {% if request.path == staff_feedback %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Send Feedback/Concern
+                Feedback/Concern
               </p>
             </a>
           </li>
