--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -43,6 +43,14 @@
             </a>
           </li>
           <li class="nav-item">
+            <a href="/cie_schedule" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                CIE Schedule
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
             <a href="/student_view_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
