modifcations wrt students view testdetails

--- a/student_management_app/templates/staff_template/view_test_details.html
+++ b/student_management_app/templates/staff_template/view_test_details.html
@@ -1,7 +1,7 @@
 {% extends 'staff_template/base_template.html' %}
 {% load static %}
 {% block page_title %}
-Test Details
+CIE Schedule
 {% endblock page_title %}
 {% block main_content %}
 <!-- Main content -->
@@ -12,7 +12,7 @@ Test Details
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Test Details</h3>
+                        <h3 class="card-title">CIE Schedule</h3>
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
