--- a/student_management_app/templates/staff_template/edit_testdetails.html
+++ b/student_management_app/templates/staff_template/edit_testdetails.html
@@ -1,68 +1,70 @@
 {% extends 'staff_template/base_template.html' %}
 {% load static %}
 {% block page_title %}
-Edit Test Details | Test ID : {{testdetails.id}}
+Edit Test Details | Test ID: {{ testdetails.id }}
 {% endblock page_title %}
 {% block main_content %}
 <!-- Main content -->
 <section class="content">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-      <div class="card card-primary">
-        <div class="card-header">
-          <h3 class="card-title">Edit Test Details</h3>
-        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">Edit Test Details</h3>
+                    </div>
 
-        <form role="form" action="{% url 'edit_testdetails_form'%}" method="post">
-          {% csrf_token %}
-          <div class="card-body">
-            <div class="form-group">
-              <label>Subject Code</label>
-              <input type="text" class="form-control" name="subject_code" placeholder="Enter Subject Code" value ="{{ course.course_name }}">
-              <input type="hidden"  name="testdetails_id"  value ="{{ testdetails.id }}">
-            </div>
-            <div class="form-group">
-                <label>IA 1 Date</label>
-                <input type="date" class="form-control" placeholder="Enter IA 1 Date" name="test1_date" value ="{{ course.course_name }}">
-              </div>
-              <div class="form-group">
-                <label>IA 2 Date</label>
-                <input type="date" class="form-control" placeholder="Enter IA 2 Date" name="test2_date" value ="{{ course.course_name }}">
-              </div>
-              <div class="form-group">
-                <label>IA 3 Date</label>
-                <input type="date" class="form-control" placeholder="Enter IA 3 Date " name="test3_date" value ="{{ course.course_name }}">
-              </div>
-              
-            <div class="form-group">
-              {% if messages %}
-              <!-- /.col -->
-              <div class="col-12">
-                {% for message  in messages %}
-                {% if message.tags == 'error' %}
-                <div class="alert alert-danger" style="margin-top:8px">{{message}}</div>
-                {% endif%}
-                {% if message.tags == 'success' %}
-                <div class="alert alert-success" style="margin-top:8px">{{message}}</div>
-                {% endif%}
-                {% endfor %}
-              </div>
-              {% endif %}
-            </div>
-            
-          </div>
+                    <div class="card-body">
+                        <form method="post" action="{% url 'edit_testdetails' testdetails_id=testdetails.id %}">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label>Subject Code</label>
+                                <input type="text" class="form-control" name="subject_code" value="{{ testdetails.subject_code}}">
+                                <input type="hidden" name="testdetails_id" value="{{ testdetails.id }}">
+                            </div>
+                            <div class="form-group">
+                              <label>Semester</label>
+                              <input type="text" class="form-control" name="semester" value="{{ testdetails.semester }}">
+          
+                          </div>
+                            <div class="form-group">
+                                <label>IA 1 Date</label>
+                                <input type="text" class="form-control"  name="test1_date" value="{{testdetails.test1_date|date:"Y-m-d"   }}">
+                            </div>
+                            <div class="form-group">
+                                <label>IA 2 Date</label>
+                                <input type="text" class="form-control" name="test2_date" value="{{ testdetails.test2_date|date:"Y-m-d"  }}">
+                            </div>
+                            <div class="form-group">
+                                <label>IA 3 Date</label>
+                                <input type="text" class="form-control" name="test3_date" value="{{ testdetails.test3_date|date:"Y-m-d"  }}">
+                            </div>
+                            <div class="form-group">
+                                {% if messages %}
+                                <!-- /.col -->
+                                <div class="col-12">
+                                    {% for message in messages %}
+                                    {% if message.tags == 'error' %}
+                                    <div class="alert alert-danger" style="margin-top:8px">{{ message }}</div>
+                                    {% endif %}
+                                    {% if message.tags == 'success' %}
+                                    <div class="alert alert-success" style="margin-top:8px">{{ message }}</div>
+                                    {% endif %}
+                                    {% endfor %}
+                                </div>
+                                {% endif %}
+                            </div>
 
-          <div class="card-footer">
-            <button type="submit" class="btn btn-primary btn-block">Save</button>
-          </div>
-        </form>
-      </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary btn-block">Save</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      
     </div><!-- /.container-fluid -->
-  </section>
-  <!-- /.content -->
+</section>
+<!-- /.content -->
 
 {% endblock main_content %}
