--- a/student_management_app/templates/hod_template/edit_admin_template.html
+++ b/student_management_app/templates/hod_template/edit_admin_template.html
@@ -14,7 +14,7 @@ Edit Admin | username : {{admin.admin.username}} | ID : {{admin.id}}
           <h3 class="card-title">Edit Admin</h3>
         </div>
 
-        <form role="form" action="/edit_admin_save" method = "POST">
+        <form role="form" action="/edit_admin_save/" method = "POST">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
@@ -28,7 +28,7 @@ Edit Admin | username : {{admin.admin.username}} | ID : {{admin.id}}
             <div class="form-group">
               <label>Last Name</label>
               <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{admin.admin.last_name}}">
-              <input type="hidden"  name="staff_id" value="{{staff.admin.id}}">
+              <input type="hidden"  name="admin_id" value="{{admin.admin.id}}">
             </div>
             <div class="form-group">
               <label>Username</label>
