--- a/student_management_app/templates/staff_template/sidebar_template.html
+++ b/student_management_app/templates/staff_template/sidebar_template.html
@@ -62,15 +62,16 @@
               </p>
             </a>
           </li>
+
           <li class="nav-item">
-            {% url 'edit_student_result' as edit_student_result %}
-            <a href="/edit_student_result" class="nav-link {% if request.path == edit_student_result %} active {% endif %}">
+            <a href="/filter_for_edit_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Edit Result
+                Edit Results
               </p>
             </a>
           </li>
+          
           <li class="nav-item">
             {% url 'staff_apply_leave' as staff_apply_leave %}
             <a href="{{ staff_apply_leave }}" class="nav-link {% if request.path == staff_apply_leave %} active {% endif %}">
