staff editing marks

--- a/student_management_app/templates/staff_template/staff_manage_testscore.html
+++ b/student_management_app/templates/staff_template/staff_manage_testscore.html
@@ -37,7 +37,7 @@ MANAGE CIE SCORES
                                     <td>{{test.test1}}</td>
                                     <td>{{test.test2}}</td>
                                     <td>{{test.test3}}</td>
-                                    <th><a href = "/edit_testdetails/{{test.id}}"class="btn btn-success">Edit</a></th>
+                                    <th><a href = "/edit_testscores/{{test.id}}"class="btn btn-success">Edit</a></th>
                                 </tr>
                                 {% endfor %}
                                     
