--- a/student_management_app/templates/staff_template/edit_testscores.html
+++ b/student_management_app/templates/staff_template/edit_testscores.html
@@ -38,6 +38,10 @@ Edit Test Scores| Test ID: {{ testscores.id }}
                                 <label>CIE 3 Scores</label>
                                 <input type="number" class="form-control" name="test3" value="{{ testscores.test3 }}">
                             </div>
+                            <div class="form-group">
+                                <label>Attendance %</label>
+                                <input type="number" class="form-control" name="attendance" value="{{ testscores.attendance }}">
+                            </div>
                             
                             <div class="form-group">
                                 {% if messages %}
