--- a/student_management_app/templates/staff_template/staff_manage_testscore.html
+++ b/student_management_app/templates/staff_template/staff_manage_testscore.html
@@ -25,6 +25,7 @@ MANAGE CIE SCORES
                                     <th>Test 1 Scores</th>
                                     <th>Test 2 Scores</th>
                                     <th>Test 3 Scores</th>
+                                    <th>Attendance %</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -37,6 +38,7 @@ MANAGE CIE SCORES
                                     <td>{{test.test1}}</td>
                                     <td>{{test.test2}}</td>
                                     <td>{{test.test3}}</td>
+                                    <td>{{test.attendance}}</td>
                                     <th><a href = "/edit_testscores/{{test.id}}"class="btn btn-success">Edit</a></th>
                                 </tr>
                                 {% endfor %}
