--- a/student_management_app/templates/hod_template/delete_admin_template.html
+++ b/student_management_app/templates/hod_template/delete_admin_template.html
@@ -14,9 +14,9 @@ Delete Admin | username : {{admin.admin.username}} | ID : {{admin.id}}
           <h3 class="card-title">Delete Admin</h3>
         </div>
 
-        <form role="form" action="/delete_admin" method = "POST" enctype = "multipart/form-data">
+        <form role="form" action="/delete_admin" method = "post">
           {% csrf_token %}
-          <input type="hidden" name="_method" value="DELETE">
+          <input type="hidden" name="admin_id" value="{{ admin.id }}">
           <div class="card-body">
             <div class="form-group">
               <label>Email address</label>
