--- a/student_management_app/templates/hod_template/replyto_staff_feedback.html
+++ b/student_management_app/templates/hod_template/replyto_staff_feedback.html
@@ -17,7 +17,7 @@ Staff Feedback
         <div class = "table">
             <table class="table">
                 <tr>
-                    <th>ID</th>
+                    <th>No.</th>
                     <th>Staff ID</th>
                     <th>Staff Name</th>
                     <th>Message</th>
@@ -28,7 +28,7 @@ Staff Feedback
                 {% for feedback in staff_feedback %}
                 <tr>
                     <td>{{ feedback.id }}</td>
-                    <td>{{feedback.staff_id.admin_id}}</td>
+                    <td>{{feedback.staff_id.admin.username}}</td>
                     <td>{{ feedback.staff_id.admin.first_name}} {{feedback.staff_id.admin.last_name}}</td>
                     <td>{{feedback.feedback}}</td>
                     <td>{{ feedback.created_at}}</td>
