--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -39,7 +39,7 @@
             <a href="/hod_profile" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Home
+                Profile
               </p>
             </a>
           </li>
