--- a/student_management_app/templates/hod_template/student_leave_status.html
+++ b/student_management_app/templates/hod_template/student_leave_status.html
@@ -18,7 +18,7 @@ Student Leave Application
                 <div class="table">
                     <table class="table">
                         <tr>
-                            <th>ID</th>
+                            <th>No.</th>
                             <th>Student ID</th>
                             <th>Student Name</th>
                             <th>Leave Date</th>
@@ -29,7 +29,7 @@ Student Leave Application
                         {% for leave in leaves %}
                         <tr>
                           <td>{{ leave.id }}</td>
-                          <td>{{ leave.student_id.admin.id }}</td>  <!--not getting displayed-->
+                          <td>{{ leave.student_id.admin.username }}</td>  <!--not getting displayed-->
                           <td>{{ leave.student_id.admin.first_name }} {{ leave.student_id.admin.last_name }}</td>  <!--not getting displayed-->
                           <td>{{ leave.leave_date }}</td>
                           <td>{{ leave.leave_message }}</td>
