--- a/student_management_app/templates/staff_template/sidebar_template.html
+++ b/student_management_app/templates/staff_template/sidebar_template.html
@@ -30,7 +30,7 @@
             <a href="/staff_profile" class="nav-link {% if request.path == staff_profile %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Home
+                Profile
               </p>
             </a>
           </li>
