--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -29,7 +29,7 @@
             <a href="{{ student_profile }}" class="nav-link {% if request.path == student_home %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Home
+                Profile
               </p>
             </a>
           </li>
