--- a/student_management_app/templates/main_login.html
+++ b/student_management_app/templates/main_login.html
@@ -39,7 +39,7 @@
 			width:100%;
 			height:100%;
 			position:absolute;
-			padding:90px 70px 50px 70px;
+			padding:180px 70px 50px 70px;
 			background:#08015f
 		}
 		.login-html .sign-in-htm,
@@ -165,6 +165,37 @@
 		.foot-lnk{
 			text-align:center;
 		}
+		.passport-photo {
+			position: relative;
+			width: 100px; /* Adjust the width as per your requirements */
+			height: auto;
+		  }
+		
+		  .left-photo {
+			position: absolute;
+			top: 20px;
+			left: 20px;
+		  }
+		
+		  .right-photo {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+		
+		  }
+		  .text-between-photos {
+			position: absolute;
+ 			    top: 10%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				color: white;
+				font-size: 24px;
+				width: 100%;
+				text-align: center;
+				font-size: 48px; /* Increase the font size to 28 pixels */
+
+				margin-top: 10px;
+		  }
 	</style>
 </head>
 <body>
@@ -210,6 +241,10 @@
 
 			</div>
 		</div>
+		<img class="passport-photo left-photo" src="/static/dist/img/1.png" alt="Left Photo">
+		<img class="passport-photo right-photo" src="/static/dist/img/2.png" alt="Right Photo">
+		<div class="text-between-photos">RNSIT </div>
+
 	</div>
 </form>
 	
