--- a/student_management_app/templates/staff_template/sidebar_template.html
+++ b/student_management_app/templates/staff_template/sidebar_template.html
@@ -58,7 +58,7 @@
             <a href="/add_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Add Results
+                Upload CIE Results
               </p>
             </a>
           </li>
@@ -67,7 +67,7 @@
             <a href="/filter_for_edit_results" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Edit Results
+                Manage CIE Scores
               </p>
             </a>
           </li>
